tests/parsing/cmc/errors/154.expected
File "tests/parsing/cmc/errors/154.cmc", line 1, character 27-28:
1 | (check-system sys :query (q))
                               ^
Error while parsing a system query, read a closing parenthesis,
      but expected a list of reachability variables.
